syntax = "proto3";

package api.user.service.v1;


option go_package = "kratos-admin/api/user/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.user.service.v1";

service User {
    rpc CreateUser (CreateUserReq) returns (CreateUserReply);
    rpc UpdateUser (UpdateUserReq) returns (UpdateUserReply);
    rpc DeleteUser (DeleteUserReq) returns (DeleteUserReply);
    rpc GetUser (GetUserReq) returns (GetUserReply);
    rpc ListUser (ListUserReq) returns (ListUserReply);
}



message CreateUserReq {
    uint32 age = 3;
    string user_name = 4;
    string password = 5;
    string email = 6;
    string role_name = 7;
    string phone = 8;
}

message CreateUserReply {
    uint32 user_id = 1;
}

message UpdateUserReq {
    int64 id = 1;
    uint32 user_id = 2;
    uint32 age = 3;
    string user_name = 4;
    string password = 5;
    string email = 6;
    string role_name = 7;
    string phone = 8;
}

message UpdateUserReply {
    int64 id = 1;
    uint32 user_id = 2;
    uint32 age = 3;
    string user_name = 4;
    string password = 5;
    string email = 6;
    string role_name = 7;
    string phone = 8;
    string created_at = 9;
    string updated_at = 10;
}


message DeleteUserReq {
    uint32 user_id = 1;
}

message DeleteUserReply {
    bool ok = 1;
}

message GetUserReq {
    uint32 user_id = 1;


}

message GetUserReply {
    int64 id = 1;
    uint32 user_id = 2;
    uint32 age = 3;
    string user_name = 4;
    string password = 5;
    string email = 6;
    string role_name = 7;
    string phone = 8;
    string created_at = 9;
    string updated_at = 10;
}

message ListUserReq {
    int64 page_num = 2;
    int64 page_size = 3;
}



message ListUserReply {
    message User {
        int64 id = 1;
        uint32 user_id = 2;
        uint32 age = 3;
        string user_name = 4;
        string password = 5;
        string email = 6;
        string role_name = 7;
        string phone = 8;
        string created_at = 9;
        string updated_at = 10;
    }
    repeated User users = 1;
}

message VerifyPasswordReq {
    string user_name = 1;
    string password = 2;
}

message VerifyPasswordReply {
    bool ok = 1;
    int64 id = 2;
}